Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1121 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -23,7 +23,7 @@
   * [ModelsOverview Overview]
   * [ModelTransmission Transmission models]
   * [ModelWithinHost Within-host models]
-  * [ModelPathogenesis Morbidity models]
-  * [ModelClinical Clinical episode, case management, and mortality models]
+  * [ModelPathogenesis Morbidity (pathogenesis) models]
+  * [ModelClinical Clinical (sickness) models]
   * [ModelDrug Drug (PKPD) action & resistance models]
   * [ModelInterventions Intervention deployment and descriptions]
