Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1125 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -26,4 +26,5 @@
   * [ModelPathogenesis Morbidity (pathogenesis) models]
   * [ModelClinical Clinical (sickness) models]
   * [ModelDrug Drug (PKPD) action & resistance models]
+  * [ModelNeonatal Neonatal mortality]
   * [ModelInterventions Intervention deployment and descriptions]
