Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1130 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -21,6 +21,7 @@
 
 ===Model components===
   * [ModelsOverview Overview]
+  * [ModelDemography Human demography]
   * [ModelTransmission Transmission models]
   * [ModelWithinHost Within-host models]
   * [ModelPathogenesis Morbidity (pathogenesis) models]
