Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1132 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -8,7 +8,7 @@ The clinical model considers two sub-categories of severe malaria bouts, as pres
 
 There are two implementations of the clinical model, described below.
 
-== Notation ==
+=== Notation ===
 
 Due to confusion of terms while adapting the clinical model for a 1-day timestep, we have developed the following notation.
 
