--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -243,7 +243,7 @@ The `ModelOptions` sub-element is a list of binary options, in the same format a
 
 === `clinical` ===
 
-The `clinical` element currently simply has a `healthSystemMemory` attribute: if, when a sickness event occurs, the previous episode was less than this many time-steps ago, the new episode is considered a second case (second-line treatment may be used and the two episodes will likely be reported as a single episode).
+The `clinical` element currently simply has a `healthSystemMemory` attribute: if, when a sickness bout occurs, the previous episode was less than this many time-steps ago, the new bout is considered a second case (second-line treatment may be used and the two bouts will likely be reported as a single episode).
 
 (The main health-system description is [XmlScenario#Health_system above].)
 
