Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1178 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelInterventions.wiki
+++ b/wiki/ModelInterventions.wiki
@@ -27,7 +27,7 @@ Three vaccines that are deployed simultaneously.
 == Others ==
 
  * ITNs
- * ipti
+ * IPTi and IPTc
  * change HS
  * change EIR
  * MDA
