Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1180 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelNeonatal.wiki
+++ b/wiki/ModelNeonatal.wiki
@@ -2,5 +2,6 @@
 
 = Neonatal mortality =
 
-Paper: [http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/74 Ross, Smith; 2006], code: NeonatalMortality class.
-A mathematical model for the association between P. falciparum transmission and neonatal death. The excess risk of neonatal mortality in malaria-endemic areas appears to be insensitive to the intensity of P. falciparum transmission over a wide range of endemicity. Moderate reductions in the overall level of malaria transmission in endemic areas are therefore unlikely to significantly reduce neonatal mortality. The magnitude of the excess risk is very uncertain because existing estimates are heavily dependent on the questionable assumption that the effects are mediated by birth weight. Accurate prediction of the impact of malaria control measures targeted at pregnant women requires direct estimates of malaria-attributable neonatal mortality rates.
+code: NeonatalMortality class.
+
+A model relating P. falciparum transmission to indirect malaria deaths in the neonatal period caused by infections in pregnant women. Pregnancies are not simulated, instead the model has two components relating (i) the prevalence of P. falciaprum in the general population to the prevalence in primigravidae and (ii) the prevalence in primigravidae to indirect malaria neonatal mortality. Paper: [http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/74 Ross, Smith; 2006]
