--- a/wiki/ModelNeonatal.wiki
+++ b/wiki/ModelNeonatal.wiki
@@ -4,4 +4,4 @@
 
 code: NeonatalMortality class.
 
-A model relating P. falciparum transmission to indirect malaria deaths in the neonatal period caused by infections in pregnant women. Pregnancies are not simulated, instead the model has two components relating (i) the prevalence of P. falciaprum in the general population to the prevalence in primigravidae and (ii) the prevalence in primigravidae to indirect malaria neonatal mortality. Paper: [http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/74 Ross, Smith; 2006]
+A model relating P. falciparum transmission to indirect malaria deaths in the neonatal period caused by infections in pregnant women. Pregnancies are not simulated, instead the model has two components relating (i) the prevalence of P. falciparum in the general population to the prevalence in primigravidae and (ii) the prevalence in primigravidae to indirect malaria neonatal mortality. Paper: [http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/74 Ross, Smith; 2006]
